--- a/stylee.css
+++ b/stylee.css
@@ -489,6 +489,64 @@ font-family: Arial, Helvetica, sans-serif;
         font-weight: 700;
     
     }
+    .dark-mode {
+        background-color: rgb(31 41 55);
+        color: orange;
+      }
+      body.dark-mode {
+        background-color: rgb(31, 41, 55); 
+        color: #ffffff; 
+    }
+    .dark-mode .olke{
+        background: rgb(17 24 39);
+    }
+    .dark-mode .show-buton  button{
+        background-color:orange;
+    }
+    .dark-mode #mobilmenu   a{
+        color: #fff;
+    }
+    .dark-mode header, 
+    .dark-mode .content-main,
+    .dark-mode #mobilmenu,
+    .dark-mode footer  {
+        background-color: rgb(31, 41, 55); 
+       
+        
+     
+    }
+    .dark-mode .dekstop a{
+        color: #Ffff;
+    }
+    .dark-mode 
+    .dark-mode a,
+    .dark-mode h2,
+    .dark-mode h3,
+    .dark-mode h5,
+    .dark-mode p,
+    .dark-mode span,
+    .dark-mode button {
+        color: #ffffff; 
+    }
+    
+    .dark-mode .desc h3 a,
+    .dark-mode .desc h5 a {
+        color: orange !important; 
+    }
+    
+    .dark-mode .desc h5 a {
+        color: red !important;
+    }
+    
+    .dark-mode #btn1 {
+        background: #8B5CF6;
+        color: #ffffff; 
+    }
+    
+    .dark-mode #btn2 {
+        background: #000000; 
+        color: #ffffff;
+    }
     footer{
         background: #fff;
         padding: 30px;
