--- a/stylee.css
+++ b/stylee.css
@@ -1,315 +1,8 @@
-* {
+*{
     padding: 0;
     margin: 0;
     box-sizing: border-box;
-    list-style: none;
-    text-decoration: none;
 }
-
-body {
-    background: rgb(229 231 235);
-}
-
-header {
-    background: #FFF;
-    padding: 20px;
-    width: 100%;
-    height: 12vh;
-
-}
-
-nav {
-    padding: 16px;
-
-}
-
-.headercontent {
-    position: relative;
-
-}
-
-.content-main {
-    width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    background: #fff;
-    overflow: hidden;
-
-}
-
-.content-main i {
-    font-size: 25px;
-}
-
-.content-main svg {
-    width: 2.5em;
-}
-
-.svg2 {
-    font-size: 15px;
-    margin-left: -15px;
-}
-
-.content-main a {
-    color: #8b5cf6;
-    border-bottom: 2px solid #8B5CF6 !important;
-}
-
-#menu {
-    width: 100%;
-    height: 0;
-    overflow: hidden;
-    text-align: center;
-    transition: all 0.8s;
-    position: absolute;
-    right: -100%;
-    left: 20px;
-    background: #fff;
-
-    li {
-
-        font-size: 1.3em;
-        padding: 10px;
-
-    }
-
-    a {
-        color: #000;
-        margin: 10px;
-
-    }
-}
-
-#menu.open {
-    height: 30vh;
-    transition: 1s all;
-
-    right: 0;
-
-}
-
-.content-desktop {
-    display: none;
-}
-
-.text-content {
-
-    width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    gap: 40px;
-    margin: 30px auto;
-
-}
-
-.text-main {
-
-    text-align: center;
-    padding: 15px;
-}
-
-.text-main h2 {
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 1.875rem;
-    font-weight: 700;
-}
-
-.text-main p {
-    margin-top: 20px;
-    font-family: Arial, Helvetica, sans-serif;
-    color: #8B5CF6;
-    font-size: 1.875rem;
-    line-height: 2.25rem;
-    font-weight: 700;
-}
-
-.buttons {
-    margin-top: 30px;
-    width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    gap: 30px;
-}
-
-#btn1 {
-    width: 170px;
-    padding: 15px;
-    background: #8B5CF6;
-    color: #fff;
-    border: none;
-    border-radius: 3px;
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 1em;
-    font-weight: 700;
-
-}
-
-#btn2 {
-    width: 170px;
-    padding: 15px;
-    background: #000;
-    color: #fff;
-    border: none;
-    border-radius: 3px;
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 1em;
-    font-weight: 700;
-
-}
-
-footer {
-    background: #fff;
-    padding: 10px;
-    width: 100%;
-
-}
-
-.footercont {
-    width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    padding: 5px;
-}
-
-.footercont h4 {
-    font-family: Georgia, 'Times New Roman', Times, serif;
-    font-size: 1em;
-}
-
-.footercont img {
-    width: 55%;
-    object-fit: cover;
-}
-
-.frstcountry {
-    max-width: 80%;
-    margin: auto;
-    padding: 20px 0;
-    text-align: left;
-    border-bottom: 2px solid #8B5CF6;
-}
-
-.frstcountry img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-
-}
-
-.desc>* {
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 1.1em;
-
-    a {
-        font-family: Arial, Helvetica, sans-serif;
-        text-decoration: none;
-    }
-
-    margin-top: 10px;
-}
-
-.olkeler {
-    width: 100%;
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
-    justify-content: center;
-    margin: 40px 0;
-}
-
-#olkeler {
-    width: 100%;
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
-    justify-content: center;
-    margin: 40px 0;
-}
-
-.olke {
-    height: 350px;
-    width: 300px;
-    margin: 20px 10px;
-    text-align: left;
-    background: #fff;
-    padding: 5px;
-}
-
-#olke {
-    height: 350px;
-    width: 300px;
-    margin: 20px 10px;
-    text-align: left;
-    background: #fff;
-    
-}
-
-
-
-.olke img {
-    width: 100%;
-    object-fit: cover;
-}
-
-
-.olke h5 {
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 1.5em;
-    margin-bottom: 10px;
-    color: black;
-}
-
-#span p {
-    font-size: 1.2em;
-}
-
-.olke h3 {
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    font-style: italic;
-    font-size: 1.2em;
-    font-weight: 500;
-}
-
-.statiska {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 15px;
-}
-.statiska span {
-    font-family: Arial, Helvetica, sans-serif;
-    margin-top: 5px;
-    font-size: 1.1em;
-}
-
-.show-buton {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin: 20px auto;
-    width: 100%;
-}
-
-.show-buton button {
-    background: transparent;
-    width: 30%;
-    height: 30px;
-    background: rgb(12, 155, 238);
-    color: #fff;
-    border: none;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    font-size: 1.1em;
-    border-radius: 5px;
-    padding: 5px;
-}
-
 .dark-mode {
     background-color: rgb(31 41 55);
     color: orange;
@@ -320,27 +13,24 @@ body.dark-mode {
     color: #ffffff;
 }
 
-.dark-mode .olke {
+.dark-mode .section1{
     background: rgb(17 24 39);
-}
-
-.dark-mode .show-buton button {
-    background-color: orange;
-}
-
-.dark-mode #mobilmenu a {
     color: #fff;
 }
 
+.dark-mode  .card23 , footer {
+    background-color: orange;
+}
+.
 .dark-mode header,
-.dark-mode .content-main,
-.dark-mode #mobilmenu,
-.dark-mode footer {
+.dark-mode .card24,
+.dark-mode #main1 {
     background-color: rgb(31, 41, 55);
 
 
 
 }
+
 
 .dark-mode .dark-mode a,
 .dark-mode h2,
@@ -352,161 +42,12 @@ body.dark-mode {
     color: #ffffff;
 }
 
-.dark-mode .desc h3 a,
-.dark-mode .desc h5 a {
-    color: orange !important;
-}
 
-.dark-mode .desc h5 a {
+.dark-mode  h5 a {
     color: red !important;
 }
 
-.dark-mode #btn1 {
-    background: #8B5CF6;
-    color: #ffffff;
-}
-
-.dark-mode #btn2 {
-    background: #000000;
-    color: #ffffff;
-}
-
 @media only screen and (min-width: 768px) {
-    .content-main {
-        display: none;
-    }
-
-    .desktop {
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-        width: 100%;
-
-
-    }
-
-    .show {
-        display: none;
-
-    }
-
-
-    .content-desktop {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        gap: 10px;
-        width: 100%;
-        position: relative;
-        top: -25px;
-        overflow: hidden;
-    }
-
-    .content-desktop a {
-        color: #000;
-        margin-left: 30px;
-        text-decoration: none;
-        font-size: 1.4em;
-        padding: 5px 0;
-        border-bottom: 2px solid #e5e7eb !important;
-
-
-
-
-    }
-
-    .svg-desktop {
-        color: #8b5cf6;
-        margin: 0 -15px;
-        padding: 5px 0;
-        border-bottom: 2px solid #e5e7eb !important;
-    }
-
-    .content-desktop svg {
-        width: 2em;
-        border-bottom: none;
-
-    }
-
-    .svgdes {
-        position: absolute;
-        right: 2%;
-
-    }
-
-    .desktip-hr {
-        transform: translate(-60px, 20px);
-        width: 50px;
-    }
-
-    .text-content {
-        width: 100%;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        flex-direction: column;
-        gap: 40px;
-        margin: 100px auto;
-
-    }
-
-    .text-main {
-
-        text-align: center;
-        padding: 15px;
-    }
-
-    .text-main h2 {
-        font-family: Arial, Helvetica, sans-serif;
-        font-size: 2.3rem;
-        font-weight: 700;
-    }
-
-    .text-main p {
-        margin-top: 20px;
-        font-family: Arial, Helvetica, sans-serif;
-        color: #8B5CF6;
-        font-size: 2em;
-        line-height: 2.25rem;
-        font-weight: 700;
-    }
-
-    .buttons {
-        margin-top: 30px;
-        width: 100%;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        flex-direction: row;
-        gap: 30px;
-    }
-
-    #btn1 {
-        width: 170px;
-        padding: 15px;
-        background: #8B5CF6;
-        color: #fff;
-        border: none;
-        border-radius: 3px;
-        font-family: Arial, Helvetica, sans-serif;
-        font-size: 1em;
-        font-weight: 700;
-
-    }
-
-    #btn2 {
-        width: 170px;
-        padding: 15px;
-        background: #000;
-        color: #fff;
-        border: none;
-        border-radius: 3px;
-        font-family: Arial, Helvetica, sans-serif;
-        font-size: 1em;
-        font-weight: 700;
-
-    }
-
     .dark-mode {
         background-color: rgb(31 41 55);
         color: orange;
@@ -517,31 +58,31 @@ body.dark-mode {
         color: #ffffff;
     }
 
-    .dark-mode .olke {
+    .dark-mode .section1{
         background: rgb(17 24 39);
-    }
-
-    .dark-mode .show-buton button {
-        background-color: orange;
-    }
-
-    .dark-mode #mobilmenu a {
         color: #fff;
     }
 
-    .dark-mode header,
-    .dark-mode .content-main,
-    .dark-mode #mobilmenu,
+    .dark-mode .card23  {
+        background-color: orange;
+    }
+    .dark-mode .card24  {
+        background-color: orange;
+    }
+
     .dark-mode footer {
+        background-color: orange;
+    }
+
+    .dark-mode header,
+    .dark-mode .card24,
+    .dark-mode #main1 {
         background-color: rgb(31, 41, 55);
 
 
 
     }
 
-    .dark-mode .dekstop a {
-        color: #Ffff;
-    }
 
     .dark-mode .dark-mode a,
     .dark-mode h2,
@@ -558,102 +99,9 @@ body.dark-mode {
         color: orange !important;
     }
 
-    .dark-mode .desc h5 a {
+    .dark-mode  h5 a {
         color: red !important;
     }
 
-    .dark-mode #btn1 {
-        background: #8B5CF6;
-        color: #ffffff;
-    }
-
-    .dark-mode #btn2 {
-        background: #000000;
-        color: #ffffff;
-    }
-
-    footer {
-        background: #fff;
-        padding: 30px;
-        width: 100%;
-    }
-
-    .frstcountry {
-        height: 400px;
-        display: flex;
-        align-items: center;
-        gap: 10px;
-        max-width: 80%;
-
-    }
-
-    .frstcountry .img {
-        width: 50%;
-        height: 100%;
-    }
-
-    .frstcountry img {
-        width: 100%;
-        height: 100%;
-        object-fit: cover;
-
-    }
-
-    .desc {
-        width: 50%;
-        padding: 30px;
-        height: 100%;
-        background: #fff;
-        box-shadow: 0 20px 25px -5px rgb(0 0 0 / 0.1), 0 8px 10px -6px rgb(0 0 0 / 0.1);
-    }
-
-    .desc h3 a {
-        text-decoration: none;
-        color: orange !important;
-        font-size: 1.7em;
-
-
-    }
-
-    .desc h5 a {
-        color: red;
-    }
-
-    .olke img {
-        width: 100%;
-        width: 100%;
-        height: 200px;
-        object-fit: cover;
-        padding-bottom: 10px;
-    }
-    
-    #olke {
-        height: max-content;
-        width: 300px;
-        margin: 20px 10px;
-        text-align: left;
-        background: #fff;
-    }
  
-#olke h3,span,p{
-    margin: 0 0 0 0 ;
-}
-    .footercont {
-        width: 100%;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        flex-direction: row;
-        padding: 5px;
-    }
-
-    .footercont h4 {
-        font-family: Georgia, 'Times New Roman', Times, serif;
-        font-size: 1.2em;
-    }
-
-    .footercont img {
-        width: 15%;
-        object-fit: cover;
-    }
 }
