--- a/stylee.css
+++ b/stylee.css
@@ -7,7 +7,9 @@
     background-color: rgb(31 41 55);
     color: orange;
 }
-
+.dark-mode .btn2{
+    background-color: orange;
+}
 body.dark-mode {
     background-color: rgb(31, 41, 55);
     color: #ffffff;
@@ -21,30 +23,90 @@ body.dark-mode {
 .dark-mode  .card23 , footer {
     background-color: orange;
 }
-.
 .dark-mode header,
-.dark-mode .card24,
+
 .dark-mode #main1 {
     background-color: rgb(31, 41, 55);
 
 
 
 }
-
+.dark-mode footer {
+    background-color: orange;
+}
 
 .dark-mode .dark-mode a,
 .dark-mode h2,
 .dark-mode h3,
 .dark-mode h5,
+.dark-mode h1,
 .dark-mode p,
 .dark-mode span,
 .dark-mode button {
     color: #ffffff;
 }
 
-
+.dark-mode .card24{
+    background: #f5a003;
+    
+}
 .dark-mode  h5 a {
     color: red !important;
+}
+nav {
+    padding: 5px;
+    position: fixed;
+    right: -100%;
+    top: 0; 
+    display: flex;
+    align-items: flex-end;
+    justify-content: center;
+    flex-direction: column;
+    width: 100%;
+    height: 50vh;
+    background: #fff;
+ opacity: 80%;
+    transition: .5s all;
+    z-index: 1001;
+}
+
+#menuToggle{
+    font-size: 18px;
+ 
+}
+#menu {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    list-style: none;
+    text-align: left;
+    font-size: 12px;
+    padding: 14px 20px 14px 20px;
+   li{
+
+    font-size: 18px;
+    border-bottom: 1px solid red;
+   }
+}
+#menu i{
+    transform: rotate(40deg);
+    font-size: 11px!important;
+}
+.left {
+    right: 0 !important;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+text-align: center;
+}
+.drop {
+    display: none;
+}
+
+.drop.block {
+    display: block;
 }
 
 @media only screen and (min-width: 768px) {
@@ -52,7 +114,9 @@ body.dark-mode {
         background-color: rgb(31 41 55);
         color: orange;
     }
-
+#menuToggle{
+    display: none;
+}
     body.dark-mode {
         background-color: rgb(31, 41, 55);
         color: #ffffff;
@@ -65,6 +129,7 @@ body.dark-mode {
 
     .dark-mode .card23  {
         background-color: orange;
+        color: #fff;
     }
     .dark-mode .card24  {
         background-color: orange;
@@ -75,17 +140,20 @@ body.dark-mode {
     }
 
     .dark-mode header,
-    .dark-mode .card24,
     .dark-mode #main1 {
         background-color: rgb(31, 41, 55);
 
 
 
     }
-
+.dark-mode .card24{
+    background: #f5a003;
+    
+}
 
     .dark-mode .dark-mode a,
     .dark-mode h2,
+    .dark-mode h1,
     .dark-mode h3,
     .dark-mode h5,
     .dark-mode p,
